# python-ldap3-demo

./: .gitignore  Makefile  README.md  configure_project.sh  dev.Dockerfile  prod.Dockerfile  requirements.txt  setup.cfg  setup.py
k8s/: app.yaml
main/: __init__.py  __main__.py  app.py
main/routes/: ldap_api.py
main/static/: swagger.json
src/: __main__.py
src/ldap3_demo/: __init__.py  app.py  config.py  logging.conf
src/ldap3_demo/controllers/: connection_manager.py  ldap_controller.py
src/ldap3_demo/dtos/: add_element_request.py  add_entry_request.py  attribute.py  attribute_schema.py  change.py  key_value_pair.py  modify_entry_request.py  operation.py  operation_type.py  search.py
src/ldap3_demo/resources/: config_template.yaml
src/ldap3_demo/routes/: ldap_api.py
src/ldap3_demo/schemas/: add_entry_request_schema.py  attribute_schema.py  change_entry_request_schema.py  change_schema.py  key_value_pair_schema.py  modify_entry_request_schema.py  operation_schema.py  search_schema.py
src/ldap3_demo/static/: swagger.yaml
test/: context.py  test_app.py
tests/: conftest.py  context.py  test_app.py  test_attribute.py  test_attribute_schema.py
tests/controllers/: test_add_entry.py  test_add_ou.py  test_add_user.py  test_connection_manager.py  test_delete.py  test_mock_ldap_server.py  test_scrub_dict.py  test_scrub_json.py  test_search.py
tests/dtos/: test_add_element_request.py  test_add_entry_request.py  test_add_entry_request_dto.py  test_attribute.py  test_key_value_pair.py  test_modify_entry_request_dto.py  test_search_dto.py
tests/schemas/: test_add_entry_request_schema.py  test_attribute_schema.py  test_modify_entity_request_schema.py  test_search_schema.py
